[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi[standard]>=0.139.0",
    "langchain-text-splitters>=1.1.2",
    "pymupdf>=1.28.0",
    "sentence-transformers>=5.6.0",
]
