[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "chromadb>=1.5.9",
    "fastapi[standard]>=0.139.0",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "pymupdf>=1.28.0",
    "sentence-transformers>=5.6.0",
    "rank-bm25>=0.2.2",
]
